adding attachments folder

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p class="sub">I am currently specialising in ML, DL and LLMs for business impact</p>
         <div class="cta">
           <a class="btn primary" href="#projects">See projects</a>
-          <a class="btn" href="CV.pdf" target="_blank" rel="noopener">Download CV</a>
+          <a class="btn" href="attachments/CV.pdf" target="_blank" rel="noopener">Download CV</a>
           <a class="btn" href="mailto:you@domain.com">Email me</a>
         </div>
         <div class="statbar" aria-label="Quick stats">
@@ -201,7 +201,7 @@
               <p class="sub">I conducted a study to identify the key factors influencing diabetes diagnosis and evaluate how well different machine learning models predict diabetes outcomes.</p>
               <div class="tags"><span class="tag">Python</span><span class="tag">ML</span></div>
             </div>
-            <a class="view" href="Coursework.pdf" target="_blank" rel="noopener">Read report →</a>
+            <a class="view" href="attachments/Coursework.pdf" target="_blank" rel="noopener">Read report →</a>
           </div>
         </article>
       </div>
