--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Josh Le Grice — Data Science Portfolio</title>
 <meta name="description" content="Projects and skills by Josh Le Grice — data science & machine learning portfolio." />
 <meta name="author" content="Josh Le Grice" />
+<link rel="icon" href="images/icon.svg" type="image/svg">
 
 <style>
   :root{
@@ -32,7 +33,7 @@
   nav a{margin-left:16px;color:inherit;text-decoration:none;font-weight:700;opacity:.9}
   nav a:hover{opacity:1}
 
-  /* Hero with profile image (Option 2) */
+  /* Hero with profile image */
   .hero{display:flex;align-items:center;gap:24px;margin-top:10px}
   .hero img{width:140px;height:140px;border-radius:50%;object-fit:cover;box-shadow:0 8px 22px rgba(0,0,0,.2)}
   .hero-card{background:var(--card);border:1px solid rgba(0,0,0,.06);border-radius:var(--radius);box-shadow:var(--shadow);flex:1;padding:26px}
