--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Josh Le Grice — Data Science Portfolio</title>
 <meta name="description" content="Projects and skills by Josh Le Grice — data science & machine learning portfolio." />
 <meta name="author" content="Josh Le Grice" />
-<link rel="icon" href="images/icon.svg" type="image/svg">
+<link rel="icon" href="images/icon.svg" type="image/svg+xml">
 
 <style>
   :root{
