fixing commercial KPI project

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               Internship project at Ekimetrics: upload → clean/stack → interactive dashboards. Streamlined reporting for commercial teams.
             </p>
             <div class="tags"><span class="tag">App&nbsp;Design</span><span class="tag">Viz</span><span class="tag">Python</span></div>
-            <span class="muted">Not publicly accessible</span>
+            <span class="view">Not publicly accessible</span>
           </div>
         </article>
       </div>
