editing descriptions of projects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="pad">
             <strong>Portfolio LLM</strong>
             <p class="muted" style="margin:6px 0 0">
-              Interactive LLM app that indexes my CV & projects for semantic search and Q&A.
+              Developed an interactive LLM-powered application that indexes my CV and project documents, enabling semantic search and natural language Q&A.
             </p>
             <div class="tags"><span class="tag">Python</span><span class="tag">LLM</span><span class="tag">App&nbsp;Design</span></div>
             <a class="view" href="https://portfoliollm.streamlit.app/" target="_blank" rel="noopener">Open app →</a>
@@ -188,7 +188,7 @@
           <div class="pad">
             <strong>Commercial KPI Dashboard</strong>
             <p class="muted" style="margin:6px 0 0">
-              Internship project at Ekimetrics: upload → clean/stack → interactive dashboards. Streamlined reporting for commercial teams.
+              Built a web-based KPI dashboard during my internship at Ekimetrics. Semi-automated reporting pipeline — from raw data ingestion and cleaning to interactive Power BI dashboards — reducing manual effort and improving decision-making efficiency for commercial teams.
             </p>
             <div class="tags"><span class="tag">App&nbsp;Design</span><span class="tag">Viz</span><span class="tag">Python</span></div>
             <span class="view">Not publicly accessible</span>
