--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p class="sub">MSc Data Science student at the University of Exeter. I specialise in ML, deep learning and LLMs for business impact.</p>
         <div class="cta">
           <a class="btn primary" href="#projects">See projects</a>
-          <a class="btn" href="attachments/CV.pdf" target="_blank" rel="noopener">Download CV</a>
+          <a class="btn" href="attachments/JoshCV.pdf" target="_blank" rel="noopener">Download CV</a>
           <a class="btn" href="mailto:joshualegrice@gmail.com">Email me</a>
         </div>
         <div class="statbar" aria-label="Quick stats">
