--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   .item{display:grid;grid-template-columns:260px 1fr;gap:16px;background:var(--card);border:1px solid rgba(0,0,0,.06);
         border-radius:14px;overflow:hidden;box-shadow:var(--shadow)}
   .thumb{background:linear-gradient(135deg,rgba(91,124,255,.2),rgba(123,108,255,.2));display:grid;place-items:center}
-  .thumb img{width:100%;height:100%;object-fit:cover;aspect-ratio:16/10}
-  @media (max-width:840px){ .item{grid-template-columns:1fr} .thumb img{aspect-ratio:16/9} }
+  .thumb img{width:100%;height:100%;object-fit:fill;aspect-ratio:20/9}
+  @media (max-width:840px){ .item{grid-template-columns:1fr} .thumb img{aspect-ratio:16/10} }
   .pad{padding:14px 16px}
   .tags{display:flex;gap:6px;flex-wrap:wrap;margin-top:8px}
   .tag{font-family:var(--mono);font-size:12px;padding:3px 8px;border-radius:999px;background:rgba(0,0,0,.06)}
