adding my dissertation

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <a class="btn" href="mailto:joshualegrice@gmail.com">Email me</a>
         </div>
         <div class="statbar" aria-label="Quick stats">
-          <div class="stat"><div class="k" id="projCount">4</div><div class="t">Projects</div></div>
+          <div class="stat"><div class="k" id="projCount">5</div><div class="t">Projects</div></div>
         </div>
       </div>
     </section>
@@ -128,6 +128,8 @@
           <button class="chip" data-filter="viz">Visualisation</button>
           <button class="chip" data-filter="app">App Design</button>
           <button class="chip" data-filter="LLM">LLM</button>
+          <button class="chip" data-filter="research">Research</button>
+
         </div>
       </div>
 
@@ -141,7 +143,7 @@
           <div class="pad">
             <strong>Portfolio LLM</strong>
             <p class="muted" style="margin:6px 0 0">
-              Developed an interactive LLM-powered application that indexes my CV and project documents, enabling semantic search and natural language Q&A.
+                Built an interactive LLM app that indexes my CV and projects, allowing fast retrieval of details about my projects and experiences.            
             </p>
             <div class="tags"><span class="tag">Python</span><span class="tag">LLM</span><span class="tag">App&nbsp;Design</span></div>
             <a class="view" href="https://portfoliollm.streamlit.app/" target="_blank" rel="noopener">Open app →</a>
@@ -164,7 +166,7 @@
         </article>
 
         <!-- 3: Diabetes -->
-        <article class="item" data-tags="ML viz">
+        <article class="item" data-tags="ML viz research">
           <div class="thumb">
             <img src="images/diabetes.png"
                  alt="Diabetes prediction study">
@@ -174,7 +176,7 @@
             <p class="muted" style="margin:6px 0 0">
               Study to identify key factors influencing diabetes diagnosis and evaluation of ML models for classification performance.
             </p>
-            <div class="tags"><span class="tag">Python</span><span class="tag">ML</span></div>
+            <div class="tags"><span class="tag">Python</span><span class="tag">ML</span><span class="tag">Research</span></div>
             <a class="view" href="attachments/Coursework.pdf" target="_blank" rel="noopener">Read report →</a>
           </div>
         </article>
@@ -190,8 +192,23 @@
             <p class="muted" style="margin:6px 0 0">
               Built a web-based KPI dashboard during my internship at Ekimetrics. Semi-automated reporting pipeline — from raw data ingestion and cleaning to interactive Power BI dashboards — reducing manual effort and improving decision-making efficiency for commercial teams.
             </p>
-            <div class="tags"><span class="tag">App&nbsp;Design</span><span class="tag">Viz</span><span class="tag">Python</span></div>
+            <div class="tags"><span class="tag">App Design</span><span class="tag">Viz</span><span class="tag">Python</span></div>
             <span class="view">Not publicly accessible</span>
+          </div>
+        </article>
+
+        <!-- 5: Dissertation -->
+        <article class="item" data-tags="research ML">
+          <div class="thumb">
+            <img src="images/diss.png"
+                 alt="3rd Year Dissertation">
+          </div>
+          <div class="pad">
+            <strong>The Intersection of Machine Learning and Type 1 Diabetes: A Critical Analysis of Machine Learning Driven Innovations</strong>
+            <p class="muted" style="margin:6px 0 0">
+                Conducted a critical analysis of machine learning applications in Type 1 diabetes, evaluating predictive models, diagnostic tools, and treatment innovations to assess their clinical impact and limitations            </p>
+            <div class="tags"><span class="tag">Research</span><span class="tag">ML</span></div>
+            <a class="view" href="attachments/Dissertation.pdf" target="_blank" rel="noopener">Read report →</a>
           </div>
         </article>
       </div>
@@ -207,7 +224,7 @@
         <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git</div></div>
         <div class="skill"><h3>ML</h3><div class="items">scikit-learn, XGBoost, LightGBM, PyTorch</div></div>
         <div class="skill"><h3>Data</h3><div class="items">Pandas, Polars, Spark</div></div>
-        <div class="skill"><h3>Cloud</h3><div class="items">AWS, GCP, Azure</div></div>
+        <div class="skill"><h3>Cloud</h3><div class="items">GCP, Azure</div></div>
         <div class="skill"><h3>Viz</h3><div class="items">Seaborn, Matplotlib, Plotly, PowerBI</div></div>
       </div>
     </section>
