--- a/index.html
+++ b/index.html
@@ -224,8 +224,10 @@
         <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git</div></div>
         <div class="skill"><h3>ML</h3><div class="items">scikit-learn, XGBoost, LightGBM, PyTorch</div></div>
         <div class="skill"><h3>Data</h3><div class="items">Pandas, Polars, Spark</div></div>
-        <div class="skill"><h3>Cloud</h3><div class="items">GCP, Azure</div></div>
+        <div class="skill"><h3>Cloud</h3><div class="items">Databricks, GCP, Azure</div></div>
         <div class="skill"><h3>Viz</h3><div class="items">Seaborn, Matplotlib, Plotly, PowerBI</div></div>
+        <div class="skill"><h3>IDEs</h3><div class="items">VSCode, RStudio</div></div>
+
       </div>
     </section>
 
