--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <span class="muted">Tools I use regularly</span>
       </div>
       <div class="skills">
-        <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git, HTML, Javascript</div></div>
+        <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git, HTML, JavaScript</div></div>
         <div class="skill"><h3>ML</h3><div class="items">scikit-learn, XGBoost, LightGBM, PyTorch</div></div>
         <div class="skill"><h3>Data</h3><div class="items">Pandas, Polars, Spark</div></div>
         <div class="skill"><h3>Cloud</h3><div class="items">Databricks, GCP, Azure</div></div>
