--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <style>
   :root{
-    --bg:#f6f8fb; --card:#ffffff; --ink:#0f1720; --muted:#475569;
+    --bg:#e3e4e6; --card:#ffffff; --ink:#000000; --muted:#475569;
     --accent:#5b7cff; --accent2:#7b6cff; --ring:rgba(91,124,255,.35);
     --radius:16px; --shadow:0 14px 36px rgba(2,6,23,.08);
     --sans: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
     --mono: ui-monospace, Menlo, Consolas, Monaco, "Courier New", monospace;
   }
   @media (prefers-color-scheme:dark){
-    :root{ --bg:#0f1115; --card:#12161d; --ink:#e9eef2; --muted:#9aa7b3; --shadow:0 14px 36px rgba(0,0,0,.35); }
+    :root{ --bg:#000000; --card:#000000; --ink:#e9eef2; --muted:#9aa7b3; --shadow:0 14px 36px rgba(0,0,0,.35); }
   }
   *{box-sizing:border-box}
   html,body{height:100%}
