adding new projects

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <a class="btn" href="mailto:joshualegrice@gmail.com">Email me</a>
         </div>
         <div class="statbar" aria-label="Quick stats">
-          <div class="stat"><div class="k" id="projCount">5</div><div class="t">Projects</div></div>
+          <div class="stat"><div class="k" id="projCount">6</div><div class="t">Projects</div></div>
         </div>
       </div>
     </section>
@@ -152,7 +152,7 @@
         <!-- 2: Credit Risk -->
         <article class="item" data-tags="ML viz">
           <div class="thumb">
-            <img src="images/credit-risk.png"
+            <img src="images/CreditCards.png"
                  alt="Credit Risk Analysis project">
           </div>
           <div class="pad">
@@ -168,7 +168,7 @@
         <!-- 3: Diabetes -->
         <article class="item" data-tags="ML viz research">
           <div class="thumb">
-            <img src="images/diabetes.png"
+            <img src="images/DiabetesPred.png"
                  alt="Diabetes prediction study">
           </div>
           <div class="pad">
@@ -211,6 +211,38 @@
             <a class="view" href="attachments/Dissertation.pdf" target="_blank" rel="noopener">Read report →</a>
           </div>
         </article>
+
+        <!-- 6: Sentiment Analysis -->
+        <article class="item" data-tags="research ML">
+          <div class="thumb">
+            <img src="images/FinNews.png"
+                 alt="Sentiment Analysis Project">
+          </div>
+          <div class="pad">
+            <strong>Comparative Evaluation of Neural Architectures for Sentiment Analysis on Financial News: From MLPs to Transformers</strong>
+            <p class="muted" style="margin:6px 0 0">
+                Evaluated various neural network architectures for sentiment analysis on financial news, comparing MLPs, LSTMs, and Transformer models to determine their effectiveness in capturing sentiment nuances in financial texts.
+            </p>
+            <div class="tags"><span class="tag">Research</span><span class="tag">DL</span><span class="tag">NLP</span></div>
+            <a class="view" href="attachments/Report.pdf" target="_blank" rel="noopener">Read report →</a>
+          </div>
+        </article>
+
+        <!-- 7: MLP Implementation -->
+        <article class="item" data-tags="research ML">
+          <div class="thumb">
+            <img src="images/MLP.png"
+                 alt="MLP Implementation Project">
+          </div>
+          <div class="pad">
+            <strong>Implementation of a Multi-Layer Perceptron for Image Classification</strong>
+            <p class="muted" style="margin:6px 0 0">
+                Designed a complex Multi-Layer Perceptron architecture from scratch using NumPy, achieving comparable ~89% accuracy against a PyTorch implementation on the FashionMNIST dataset            
+            </p>
+            <div class="tags"><span class="tag">Research</span><span class="tag">DL</span><span class="tag">NLP</span></div>
+            <a class="view" href="https://github.com/JoshLG18/Multi-Layer-Perceptron" target="_blank" rel="noopener">GitHub Repository →</a>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -222,12 +254,11 @@
       </div>
       <div class="skills">
         <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git, HTML, JavaScript</div></div>
-        <div class="skill"><h3>ML</h3><div class="items">scikit-learn, XGBoost, LightGBM, PyTorch</div></div>
-        <div class="skill"><h3>Data</h3><div class="items">Pandas, Polars, Spark</div></div>
-        <div class="skill"><h3>Cloud</h3><div class="items">Databricks, GCP, Azure</div></div>
-        <div class="skill"><h3>Viz</h3><div class="items">Seaborn, Matplotlib, Plotly, PowerBI</div></div>
+        <div class="skill"><h3>ML / DL</h3><div class="items">Sklearn, PyTorch</div></div>
+        <div class="skill"><h3>Data</h3><div class="items">Pandas, Spark</div></div>
+        <div class="skill"><h3>Cloud</h3><div class="items">Databricks, Azure</div></div>
+        <div class="skill"><h3>Viz</h3><div class="items">Seaborn, Matplotlib, PowerBI</div></div>
         <div class="skill"><h3>IDEs</h3><div class="items">VSCode, RStudio</div></div>
-
       </div>
     </section>
 
