fix cv and add agriculture project

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p class="sub">MSc Data Science student at the University of Exeter. I specialise in ML, deep learning and LLMs for business impact.</p>
         <div class="cta">
           <a class="btn primary" href="#projects">See projects</a>
-          <a class="btn" href="attachments/JoshCV.pdf" target="_blank" rel="noopener">Download CV</a>
+          <a class="btn" href="attachments/LeGriceJoshCV.pdf" target="_blank" rel="noopener">Download CV</a>
           <a class="btn" href="mailto:joshualegrice@gmail.com">Email me</a>
         </div>
         <div class="statbar" aria-label="Quick stats">
@@ -129,7 +129,9 @@
           <button class="chip" data-filter="app">App Design</button>
           <button class="chip" data-filter="LLM">LLM</button>
           <button class="chip" data-filter="research">Research</button>
-
+          <button class="chip" data-filter="Database">Database</button>
+          <button class="chip" data-filter="Cloud">Cloud</button>
+          <button class="chip" data-filter="RestAPI">RestAPI</button>
         </div>
       </div>
 
@@ -182,7 +184,7 @@
         </article>
 
         <!-- 4: KPI Dashboard -->
-        <article class="item" data-tags="app viz">
+        <article class="item" data-tags="app viz app">
           <div class="thumb">
             <img src="images/app.png"
                  alt="Commercial KPI dashboard app">
@@ -229,7 +231,7 @@
         </article>
 
         <!-- 7: MLP Implementation -->
-        <article class="item" data-tags="research ML">
+        <article class="item" data-tags="research DL MLP">
           <div class="thumb">
             <img src="images/MLP.png"
                  alt="MLP Implementation Project">
@@ -243,6 +245,21 @@
             <a class="view" href="https://github.com/JoshLG18/Multi-Layer-Perceptron" target="_blank" rel="noopener">GitHub Repository →</a>
           </div>
         </article>
+
+        <!-- 8: Agriculture Database -->
+        <article class="item" data-tags="Database Cloud RestAPI app">
+          <div class="thumb">
+            <img src="images/agriculture.png"
+                 alt="Agriculture Database Project">
+          </div>
+          <div class="pad">
+            <strong>Development of an Agriculture Database Management System</strong>
+            <p class="muted" style="margin:6px 0 0">
+              Engineered a cloud-hosted relational database (Azure SQL) to analyze UK agricultural sustainability. Implemented a normalized (3NF) schema, automated Python data pipelines, and developed a Node.js/Express REST API for secure data access and management.            </p>
+            <div class="tags"><span class="tag">Database</span><span class="tag">Cloud</span><span class="tag">RestAPI</span> <span class="tag">App Design</span></div>
+            <a class="view" href="https://joshlg18.github.io/Agricultural-Database/" target="_blank" rel="noopener">Database Implementation →</a>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -254,8 +271,8 @@
       </div>
       <div class="skills">
         <div class="skill"><h3>Languages</h3><div class="items">Python, SQL, R, Bash, Git, HTML, JavaScript</div></div>
-        <div class="skill"><h3>ML / DL</h3><div class="items">Sklearn, PyTorch</div></div>
-        <div class="skill"><h3>Data</h3><div class="items">Pandas, Spark</div></div>
+        <div class="skill"><h3>ML / DL</h3><div class="items">Sklearn, PyTorch, Transformers</div></div>
+        <div class="skill"><h3>Data Engineering</h3><div class="items">Pandas, Spark, RestAPI</div></div>
         <div class="skill"><h3>Cloud</h3><div class="items">Databricks, Azure</div></div>
         <div class="skill"><h3>Viz</h3><div class="items">Seaborn, Matplotlib, PowerBI</div></div>
         <div class="skill"><h3>IDEs</h3><div class="items">VSCode, RStudio</div></div>
