Update title and description in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Josh Le Grice — Data Science Portfolio</title>
-<meta name="description" content="Projects and skills by Josh Le Grice — data science & machine learning portfolio." />
+<title>Josh Le Grice — Professional Portfolio</title>
+<meta name="description" content="Projects and Skills by Josh Le Grice —  Professional Portfolio." />
 <meta name="author" content="Josh Le Grice" />
 <link rel="icon" href="images/icon.svg" type="image/svg+xml">
 
@@ -138,8 +138,8 @@
     <section class="hero" id="main">
       <img src="images/profile.jpeg" alt="Josh Le Grice">
       <div class="hero-card">
-        <h1>Data Science Portfolio</h1>
-        <p class="sub">MSc Data Science student at the University of Exeter. I specialise in ML, deep learning and LLMs for business impact.</p>
+        <h1>Professional Portfolio</h1>
+        <p class="sub">MSc Data Science student at the University of Exeter. Specialising in Deep Learning and LLMs for the Financial Industry</p>
         <div class="cta">
           <a class="btn primary" href="#projects">See projects</a>
           <a class="btn" href="attachments/LeGriceJoshCV.pdf" target="_blank" rel="noopener">Download CV</a>
